const { createComponent } = require('../test-utils')

const {
  mockCreateDistribution,
  mockUpdateDistribution,
  mockCreateDistributionPromise,
  mockGetDistributionConfigPromise,
  mockUpdateDistributionPromise
} = require('aws-sdk')

describe('Input origin with path pattern', () => {
  let component

  beforeEach(async () => {
    mockCreateDistributionPromise.mockResolvedValueOnce({
      Distribution: {
        Id: 'xyz'
      }
    })

    component = await createComponent()
  })

  it('creates distribution with custom url origin', async () => {
    await component.default({
      origins: [
        {
          url: 'https://exampleorigin.com',
          pathPatterns: {
            '/some/path': {
              ttl: 10
            }
          }
        }
      ]
    })

    expect(mockCreateDistribution).toBeCalledWith(
      expect.objectContaining({
        DistributionConfig: expect.objectContaining({
          Origins: expect.objectContaining({
            Items: [
              expect.objectContaining({
                Id: 'exampleorigin.com',
                DomainName: 'exampleorigin.com'
              })
            ]
          }),
          CacheBehaviors: expect.objectContaining({
            Items: [
              expect.objectContaining({
                PathPattern: '/some/path',
                MinTTL: 10,
                TargetOriginId: 'exampleorigin.com'
              })
            ]
          })
        })
      })
    )
    expect(mockCreateDistribution.mock.calls[0][0]).toMatchSnapshot()
  })

  it('updates distribution', async () => {
    mockGetDistributionConfigPromise.mockResolvedValueOnce({
      ETag: 'etag',
      DistributionConfig: {
        Origins: {
          Items: []
        }
      }
    })
    mockUpdateDistributionPromise.mockResolvedValueOnce({
      Distribution: {
        Id: 'xyz'
      }
    })

    await component.default({
      origins: [
        {
          url: 'https://exampleorigin.com',
          pathPatterns: {
            '/some/path': {
              ttl: 10
            }
          }
        }
      ]
    })

    await component.default({
      origins: [
        {
          url: 'https://exampleorigin.com',
          pathPatterns: {
            '/some/other/path': {
              ttl: 10
            }
          }
        }
      ]
    })

    expect(mockUpdateDistribution).toBeCalledWith(
      expect.objectContaining({
        DistributionConfig: expect.objectContaining({
          Origins: expect.objectContaining({
            Items: [
              expect.objectContaining({
                Id: 'exampleorigin.com',
                DomainName: 'exampleorigin.com'
              })
            ]
          }),
          CacheBehaviors: expect.objectContaining({
            Items: [
              expect.objectContaining({
                PathPattern: '/some/other/path',
                MinTTL: 10,
                TargetOriginId: 'exampleorigin.com'
              })
            ]
          })
        })
      })
    )

    expect(mockUpdateDistribution.mock.calls[0][0]).toMatchSnapshot()
  })
})
