// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input origin with path pattern creates distribution with custom url origin 1`] = `
Object {
  "DistributionConfig": Object {
    "Aliases": Object {
      "Items": Array [],
      "Quantity": 0,
    },
    "CacheBehaviors": Object {
      "Items": Array [
        Object {
          "Compress": true,
          "ForwardedValues": Object {
            "Cookies": Object {
              "Forward": "all",
            },
            "QueryString": true,
          },
          "MinTTL": 10,
          "PathPattern": "/some/path",
          "TargetOriginId": "exampleorigin.com",
          "TrustedSigners": Object {
            "Enabled": false,
          },
          "ViewerProtocolPolicy": "https-only",
        },
      ],
      "Quantity": 1,
    },
    "CallerReference": "1566599541192",
    "Comment": "",
    "DefaultCacheBehavior": Object {
      "AllowedMethods": Object {
        "CachedMethods": Object {
          "Items": Array [
            "HEAD",
            "GET",
          ],
          "Quantity": 2,
        },
        "Items": Array [
          "HEAD",
          "GET",
        ],
        "Quantity": 2,
      },
      "Compress": false,
      "DefaultTTL": 86400,
      "FieldLevelEncryptionId": "",
      "ForwardedValues": Object {
        "Cookies": Object {
          "Forward": "none",
        },
        "Headers": Object {
          "Items": Array [],
          "Quantity": 0,
        },
        "QueryString": false,
        "QueryStringCacheKeys": Object {
          "Items": Array [],
          "Quantity": 0,
        },
      },
      "LambdaFunctionAssociations": Object {
        "Items": Array [],
        "Quantity": 0,
      },
      "MaxTTL": 31536000,
      "MinTTL": 0,
      "SmoothStreaming": false,
      "TargetOriginId": "exampleorigin.com",
      "TrustedSigners": Object {
        "Enabled": false,
        "Items": Array [],
        "Quantity": 0,
      },
      "ViewerProtocolPolicy": "redirect-to-https",
    },
    "Enabled": true,
    "HttpVersion": "http2",
    "Origins": Object {
      "Items": Array [
        Object {
          "CustomOriginConfig": Object {
            "HTTPPort": 80,
            "HTTPSPort": 443,
            "OriginProtocolPolicy": "https-only",
          },
          "DomainName": "exampleorigin.com",
          "Id": "exampleorigin.com",
        },
      ],
      "Quantity": 1,
    },
    "PriceClass": "PriceClass_All",
  },
}
`;

exports[`Input origin with path pattern updates distribution 1`] = `
Object {
  "DistributionConfig": Object {
    "CacheBehaviors": Object {
      "Items": Array [
        Object {
          "Compress": true,
          "ForwardedValues": Object {
            "Cookies": Object {
              "Forward": "all",
            },
            "QueryString": true,
          },
          "MinTTL": 10,
          "PathPattern": "/some/other/path",
          "TargetOriginId": "exampleorigin.com",
          "TrustedSigners": Object {
            "Enabled": false,
          },
          "ViewerProtocolPolicy": "https-only",
        },
      ],
      "Quantity": 1,
    },
    "Enabled": true,
    "Origins": Object {
      "Items": Array [
        Object {
          "CustomOriginConfig": Object {
            "HTTPPort": 80,
            "HTTPSPort": 443,
            "OriginProtocolPolicy": "https-only",
          },
          "DomainName": "exampleorigin.com",
          "Id": "exampleorigin.com",
        },
      ],
      "Quantity": 1,
    },
  },
  "Id": "xyz",
  "IfMatch": "etag",
}
`;
